<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <ImageView
        android:id="@+id/image2"
        android:layout_width="166dp"
        android:layout_height="163dp"
        android:contentDescription="@string/title_image2"
        android:src="@drawable/android_image_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/displayImage2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/android_image_2" />

    <ImageView
        android:id="@+id/image3"
        android:layout_width="166dp"
        android:layout_height="163dp"
        android:contentDescription="@string/title_image3"
        android:src="@drawable/android_image_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/displayImage3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image2"
        app:srcCompat="@drawable/android_image_3" />

    <Button
        android:id="@+id/displayImage3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_image3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image3"
        app:layout_constraintTop_toBottomOf="@+id/displayImage2" />

    <Button
        android:id="@+id/displayImage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_image2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/displayImage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_image1"
        app:layout_constraintBottom_toTopOf="@+id/displayImage2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image1"
        android:layout_width="166dp"
        android:layout_height="163dp"
        android:contentDescription="@string/title_image1"
        android:src="@drawable/android_image_1"
        app:layout_constraintBottom_toTopOf="@+id/image2"
        app:layout_constraintEnd_toStartOf="@+id/displayImage1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>